proyectos/11/src/JackGrammarParser.java
// Generated from JackGrammar.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JackGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER_CONSTANT=1, STRING_CONSTANT=2, KEYWORD1=3, KEYWORD2=4, KEYWORD3=5, 
		KEYWORD4=6, KEYWORD5=7, KEYWORD6=8, KEYWORD7=9, KEYWORD8=10, KEYWORD9=11, 
		KEYWORD10=12, KEYWORD11=13, KEYWORD12=14, KEYWORD13=15, KEYWORD14=16, 
		KEYWORD15=17, KEYWORD16=18, KEYWORD17=19, KEYWORD18=20, KEYWORD19=21, 
		KEYWORD20=22, KEYWORD21=23, SYMBOL1=24, SYMBOL2=25, SYMBOL3=26, SYMBOL4=27, 
		SYMBOL5=28, SYMBOL6=29, SYMBOL7=30, SYMBOL8=31, SYMBOL9=32, SYMBOL10=33, 
		SYMBOL11=34, SYMBOL12=35, SYMBOL13=36, SYMBOL14=37, SYMBOL15=38, SYMBOL16=39, 
		SYMBOL17=40, SYMBOL18=41, SYMBOL19=42, IDENTIFIER=43, WS=44, LINE_COMMENT=45, 
		BLOCK_COMMENT=46;
	public static final int
		RULE_classJack = 0, RULE_classVarDec = 1, RULE_type = 2, RULE_subroutineDec = 3, 
		RULE_parameterList = 4, RULE_subroutineBody = 5, RULE_varDec = 6, RULE_className = 7, 
		RULE_subroutineName = 8, RULE_varName = 9, RULE_statements = 10, RULE_statement = 11, 
		RULE_letStatement = 12, RULE_ifStatement = 13, RULE_whileStatement = 14, 
		RULE_doStatement = 15, RULE_returnStatement = 16, RULE_expression = 17, 
		RULE_term = 18, RULE_subroutineCall = 19, RULE_expressionList = 20, RULE_operator = 21, 
		RULE_unaryOp = 22, RULE_keywordConstant = 23;
	public static final String[] ruleNames = {
		"classJack", "classVarDec", "type", "subroutineDec", "parameterList", 
		"subroutineBody", "varDec", "className", "subroutineName", "varName", 
		"statements", "statement", "letStatement", "ifStatement", "whileStatement", 
		"doStatement", "returnStatement", "expression", "term", "subroutineCall", 
		"expressionList", "operator", "unaryOp", "keywordConstant"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'class'", "'constructor'", "'function'", "'method'", 
		"'field'", "'static'", "'var'", "'int'", "'char'", "'boolean'", "'void'", 
		"'true'", "'false'", "'null'", "'this'", "'let'", "'do'", "'if'", "'else'", 
		"'while'", "'return'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'.'", 
		"','", "';'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'<'", "'>'", 
		"'='", "'~'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INTEGER_CONSTANT", "STRING_CONSTANT", "KEYWORD1", "KEYWORD2", "KEYWORD3", 
		"KEYWORD4", "KEYWORD5", "KEYWORD6", "KEYWORD7", "KEYWORD8", "KEYWORD9", 
		"KEYWORD10", "KEYWORD11", "KEYWORD12", "KEYWORD13", "KEYWORD14", "KEYWORD15", 
		"KEYWORD16", "KEYWORD17", "KEYWORD18", "KEYWORD19", "KEYWORD20", "KEYWORD21", 
		"SYMBOL1", "SYMBOL2", "SYMBOL3", "SYMBOL4", "SYMBOL5", "SYMBOL6", "SYMBOL7", 
		"SYMBOL8", "SYMBOL9", "SYMBOL10", "SYMBOL11", "SYMBOL12", "SYMBOL13", 
		"SYMBOL14", "SYMBOL15", "SYMBOL16", "SYMBOL17", "SYMBOL18", "SYMBOL19", 
		"IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JackGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JackGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ClassJackContext extends ParserRuleContext {
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public List<ClassVarDecContext> classVarDec() {
			return getRuleContexts(ClassVarDecContext.class);
		}
		public ClassVarDecContext classVarDec(int i) {
			return getRuleContext(ClassVarDecContext.class,i);
		}
		public List<SubroutineDecContext> subroutineDec() {
			return getRuleContexts(SubroutineDecContext.class);
		}
		public SubroutineDecContext subroutineDec(int i) {
			return getRuleContext(SubroutineDecContext.class,i);
		}
		public ClassJackContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classJack; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterClassJack(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitClassJack(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitClassJack(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassJackContext classJack() throws RecognitionException {
		ClassJackContext _localctx = new ClassJackContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_classJack);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(KEYWORD1);
			setState(49);
			className();
			setState(50);
			match(SYMBOL1);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KEYWORD5 || _la==KEYWORD6) {
				{
				{
				setState(51);
				classVarDec();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD2) | (1L << KEYWORD3) | (1L << KEYWORD4))) != 0)) {
				{
				{
				setState(57);
				subroutineDec();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(SYMBOL2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassVarDecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VarNameContext> varName() {
			return getRuleContexts(VarNameContext.class);
		}
		public VarNameContext varName(int i) {
			return getRuleContext(VarNameContext.class,i);
		}
		public ClassVarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classVarDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterClassVarDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitClassVarDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitClassVarDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassVarDecContext classVarDec() throws RecognitionException {
		ClassVarDecContext _localctx = new ClassVarDecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classVarDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_la = _input.LA(1);
			if ( !(_la==KEYWORD5 || _la==KEYWORD6) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(66);
			type();
			setState(67);
			varName();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SYMBOL8) {
				{
				{
				setState(68);
				match(SYMBOL8);
				setState(69);
				varName();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(SYMBOL9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public void copyFrom(TypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NameClaseContext extends TypeContext {
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public NameClaseContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterNameClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitNameClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitNameClase(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CaracterContext extends TypeContext {
		public CaracterContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterCaracter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitCaracter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitCaracter(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanoContext extends TypeContext {
		public BooleanoContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterBooleano(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitBooleano(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitBooleano(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EnteroContext extends TypeContext {
		public EnteroContext(TypeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterEntero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitEntero(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitEntero(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD8:
				_localctx = new EnteroContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(KEYWORD8);
				}
				break;
			case KEYWORD9:
				_localctx = new CaracterContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				match(KEYWORD9);
				}
				break;
			case KEYWORD10:
				_localctx = new BooleanoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				match(KEYWORD10);
				}
				break;
			case IDENTIFIER:
				_localctx = new NameClaseContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				className();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubroutineDecContext extends ParserRuleContext {
		public SubroutineNameContext subroutineName() {
			return getRuleContext(SubroutineNameContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public SubroutineBodyContext subroutineBody() {
			return getRuleContext(SubroutineBodyContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public SubroutineDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterSubroutineDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitSubroutineDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitSubroutineDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubroutineDecContext subroutineDec() throws RecognitionException {
		SubroutineDecContext _localctx = new SubroutineDecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_subroutineDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD2) | (1L << KEYWORD3) | (1L << KEYWORD4))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KEYWORD11:
				{
				setState(84);
				match(KEYWORD11);
				}
				break;
			case KEYWORD8:
			case KEYWORD9:
			case KEYWORD10:
			case IDENTIFIER:
				{
				setState(85);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(88);
			subroutineName();
			setState(89);
			match(SYMBOL3);
			setState(90);
			parameterList();
			setState(91);
			match(SYMBOL4);
			setState(92);
			subroutineBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<VarNameContext> varName() {
			return getRuleContexts(VarNameContext.class);
		}
		public VarNameContext varName(int i) {
			return getRuleContext(VarNameContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYWORD8) | (1L << KEYWORD9) | (1L << KEYWORD10) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(94);
				type();
				setState(95);
				varName();
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SYMBOL8) {
					{
					{
					setState(97);
					match(SYMBOL8);
					setState(98);
					type();
					setState(99);
					varName();
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubroutineBodyContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public List<VarDecContext> varDec() {
			return getRuleContexts(VarDecContext.class);
		}
		public VarDecContext varDec(int i) {
			return getRuleContext(VarDecContext.class,i);
		}
		public SubroutineBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterSubroutineBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitSubroutineBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitSubroutineBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubroutineBodyContext subroutineBody() throws RecognitionException {
		SubroutineBodyContext _localctx = new SubroutineBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subroutineBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(SYMBOL1);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KEYWORD7) {
				{
				{
				setState(109);
				varDec();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			statements();
			setState(116);
			match(SYMBOL2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VarNameContext> varName() {
			return getRuleContexts(VarNameContext.class);
		}
		public VarNameContext varName(int i) {
			return getRuleContext(VarNameContext.class,i);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterVarDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitVarDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitVarDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(KEYWORD7);
			setState(119);
			type();
			setState(120);
			varName();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SYMBOL8) {
				{
				{
				setState(121);
				match(SYMBOL8);
				setState(122);
				varName();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(SYMBOL9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackGrammarParser.IDENTIFIER, 0); }
		public ClassNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_className; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterClassName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitClassName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitClassName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassNameContext className() throws RecognitionException {
		ClassNameContext _localctx = new ClassNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_className);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubroutineNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackGrammarParser.IDENTIFIER, 0); }
		public SubroutineNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subroutineName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterSubroutineName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitSubroutineName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitSubroutineName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubroutineNameContext subroutineName() throws RecognitionException {
		SubroutineNameContext _localctx = new SubroutineNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subroutineName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(JackGrammarParser.IDENTIFIER, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitVarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JackGrammarListener ) ((JackGrammarListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JackGrammarVisitor ) return ((JackGrammarVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}
